[package]
name = "chromeless-viewer"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "chromeless-viewer"
path = "src-tauri/main.rs"

[package.metadata.tauri]
config = "src-tauri/tauri.toml"