[package]
name = "chromeless-viewer"
version = "1.0.0"
edition = "2021"
build = "build.rs"
default-run = "chromeless-viewer"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }

[[bin]]
name = "chromeless-viewer"
path = "src-tauri/main.rs"

[package.metadata.tauri]
config = "src-tauri/tauri.toml"