[package]
name = "chromeless-viewer"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }

[[bin]]
name = "chromeless-viewer"
path = "src/main.rs"

[package.metadata.tauri]
config = "tauri.toml"

[profile.release]
codegen-units = 1         # Better optimization at the cost of compile time
lto = true                # Enables link-time optimization
opt-level = "s"           # Optimize for size ("z" is even smaller, "3" is for speed)
panic = "abort"           # Removes panic unwinding code
strip = true              # Removes debug symbols